@@ -24,8 +24,11 @@ Stable versions
 	- Fix DigiBooster Pro note 0x1f (key off) and misc. other tidying.
 	- Fix Galaxy Music System 4.0 sample default panning.
 	- Fix Imago Orpheus IMF note 255 (no note, not key off).
-	- Simplify read_event_mod, read_event_st3 sample default volume
-	  handling.
+	- Simplify read_event_mod, read_event_st3, read_event_med sample
+	  default volume handling.
+	- MED "hold symbols" now apply the referenced instrument's default
+	  volume for modules from OctaMED 3.00+ and don't apply any default
+	  volume for modules from prior versions.
 	- Fix MED hold/decay implementation and add support for command 8.
 	- Fix MED synthetic instrument waveform table speeds.
 	- Fix MED module duration for modules using command 1E (pattern delay).
